--- a/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
+++ b/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
@@ -4,7 +4,10 @@
       <label class="form-control-label" for="category">Kategori</label>
       <select formControlName="categoryName">
         <option value="">Seçiniz</option>
-        <option *ngFor="let item of categories" [value]="item.name">{{item.name}}</option>
+        @for (category of categories; track $index) {
+          <option [value]="category.name">{{category.name}}</option>
+        }
+      
       </select>
     </div>
     <div class="form-group">
